--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,13 @@ body {
 
 .header-text {
   font-family: 'Libre Baskerville', serif;
-  font-size: 137px;
+  font-size: 100px;
 }
 
 .main-title {
   color: white;
   text-align: center;
-  margin-top: 400px;
+  margin-top: 200px;
 }
 
 .button {
@@ -76,7 +76,7 @@ body {
 .title {
   font-family: 'Libre Baskerville', serif;
   font-size: 60px;
-  margin-top: 200px;
+  margin-top: 80px;
 }
 
 .trio {
@@ -98,6 +98,7 @@ body {
   padding: 20px;
   padding-bottom: 100px;
   vertical-align: middle;
+  height: 100vh;
 }
 
 .box {
